--- a/styles.css
+++ b/styles.css
@@ -1049,3 +1049,8 @@ body {
   display: inline-block;
   vertical-align: middle;
 }
+@media screen and (max-width: 768px) {
+  .hero-content {
+    margin-top: 130px;
+  }
+}
